--- a/MOBI/index.html
+++ b/MOBI/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div id="app" style="height: 100%; width:100%;"></div>
+  <div id="app" style="height: 100%; width:100%; padding-bottom: 8vh;"></div>
   <script type="module" src="/src/main.js"></script>
 
 </body>
