--- a/MOBI/index.html
+++ b/MOBI/index.html
@@ -10,13 +10,18 @@
   <link rel="website icon" href="https://sabaojua.com.br/Assets/img/nova-logo.png">
   <link rel="icon" type="image/svg+xml" href="https://sabaojua.com.br/Assets/img/nova-logo.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="./output.css" rel="stylesheet">
   <title>MOBI (Merchantrack)</title>
 </head>
 
 <body>
   <div id="app" style="height: 100%; width:100%; padding-bottom: 8vh;"></div>
   <script type="module" src="/src/main.js"></script>
-
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
